namespace go common

struct BaseResp {
    1: string code
    2: string msg
}